[gd_scene load_steps=76 format=3 uid="uid://bma6r3uqptx6d"]

[ext_resource type="Script" uid="uid://cl45hfqrnnxm2" path="res://scripts/player.gd" id="1_oxdyo"]
[ext_resource type="Texture2D" uid="uid://bu611or6tud54" path="res://assets/sprites/shadow.png" id="2_3v2ag"]
[ext_resource type="Texture2D" uid="uid://clf1l0ona4m7k" path="res://assets/sprites/player-down.png" id="2_py00a"]
[ext_resource type="Texture2D" uid="uid://dyhdb2iwitv0o" path="res://assets/sprites/player-left.png" id="3_dmfgu"]
[ext_resource type="Texture2D" uid="uid://cckamhtmtr2h7" path="res://assets/sprites/player-right.png" id="4_6qbqg"]
[ext_resource type="Texture2D" uid="uid://1r4ncvr4wx56" path="res://assets/sprites/player-up.png" id="5_bglcd"]
[ext_resource type="Texture2D" uid="uid://cin2qeaggkuun" path="res://assets/sprites/sword-down.png" id="6_d2wvv"]
[ext_resource type="Texture2D" uid="uid://coffk0valdks0" path="res://assets/sprites/sword-left.png" id="7_3v2ag"]
[ext_resource type="Texture2D" uid="uid://p7et2h1apdb7" path="res://assets/sprites/sword-right.png" id="8_jej6c"]
[ext_resource type="Texture2D" uid="uid://cll1oqbv8sq74" path="res://assets/sprites/sword-up.png" id="9_f1ej7"]
[ext_resource type="Texture2D" uid="uid://bs4bxx026a2bg" path="res://assets/sprites/light.png" id="9_fnujr"]
[ext_resource type="FontFile" uid="uid://vrfuynxo4c1o" path="res://assets/fonts/DepartureMono-Regular.otf" id="11_d2wvv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_getcb"]
atlas = ExtResource("2_py00a")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy5wx"]
atlas = ExtResource("3_dmfgu")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuh3x"]
atlas = ExtResource("4_6qbqg")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fekk"]
atlas = ExtResource("5_bglcd")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("6_d2wvv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("6_d2wvv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("6_d2wvv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("6_d2wvv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("7_3v2ag")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("7_3v2ag")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("7_3v2ag")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("7_3v2ag")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("8_jej6c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("8_jej6c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("8_jej6c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("8_jej6c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("9_f1ej7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("9_f1ej7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("9_f1ej7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("9_f1ej7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0rub"]
atlas = ExtResource("2_py00a")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y5v4"]
atlas = ExtResource("2_py00a")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m383n"]
atlas = ExtResource("2_py00a")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_avt07"]
atlas = ExtResource("2_py00a")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyq2k"]
atlas = ExtResource("2_py00a")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjosy"]
atlas = ExtResource("2_py00a")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgqlf"]
atlas = ExtResource("2_py00a")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8r7r"]
atlas = ExtResource("2_py00a")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yns6"]
atlas = ExtResource("3_dmfgu")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf7ck"]
atlas = ExtResource("3_dmfgu")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k47e3"]
atlas = ExtResource("3_dmfgu")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_783ve"]
atlas = ExtResource("3_dmfgu")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aycgx"]
atlas = ExtResource("3_dmfgu")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewor7"]
atlas = ExtResource("3_dmfgu")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm4ik"]
atlas = ExtResource("3_dmfgu")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdf85"]
atlas = ExtResource("3_dmfgu")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_03icu"]
atlas = ExtResource("4_6qbqg")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhht2"]
atlas = ExtResource("4_6qbqg")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8xcs"]
atlas = ExtResource("4_6qbqg")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqukw"]
atlas = ExtResource("4_6qbqg")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_genmt"]
atlas = ExtResource("4_6qbqg")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kepq"]
atlas = ExtResource("4_6qbqg")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxm7v"]
atlas = ExtResource("4_6qbqg")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgaq2"]
atlas = ExtResource("4_6qbqg")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhgt6"]
atlas = ExtResource("5_bglcd")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o48p7"]
atlas = ExtResource("5_bglcd")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ux1g"]
atlas = ExtResource("5_bglcd")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1ot4"]
atlas = ExtResource("5_bglcd")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tai7p"]
atlas = ExtResource("5_bglcd")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6wbo"]
atlas = ExtResource("5_bglcd")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgjtn"]
atlas = ExtResource("5_bglcd")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7wgi"]
atlas = ExtResource("5_bglcd")
region = Rect2(112, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8hee"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_getcb")
}],
"loop": false,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy5wx")
}],
"loop": false,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuh3x")
}],
"loop": false,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fekk")
}],
"loop": false,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": false,
"name": &"sword_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": false,
"name": &"sword_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": false,
"name": &"sword_right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": false,
"name": &"sword_up",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0rub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y5v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m383n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avt07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyq2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjosy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgqlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8r7r")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yns6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf7ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k47e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_783ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aycgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewor7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm4ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdf85")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03icu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhht2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8xcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqukw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_genmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kepq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxm7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgaq2")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhgt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o48p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ux1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ot4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tai7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6wbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgjtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7wgi")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y4r1p"]
radius = 3.0
height = 15.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4r1p"]
size = Vector2(58, 20.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2wvv"]
size = Vector2(58, 20.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3v2ag"]
size = Vector2(20.5, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jej6c"]
size = Vector2(20.5, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_esh0l"]
radius = 48.0

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_d2wvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3v2ag"]
bg_color = Color(0.0253638, 0.0253638, 0.0253638, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jej6c"]
bg_color = Color(1.44874e-05, 0.762052, 0.163541, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="LabelSettings" id="LabelSettings_f1ej7"]
font = ExtResource("11_d2wvv")
font_size = 22

[node name="Player" type="CharacterBody2D" groups=["players"]]
z_index = 2
texture_filter = 1
collision_mask = 11
motion_mode = 1
script = ExtResource("1_oxdyo")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 3)
texture = ExtResource("2_3v2ag")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_u8hee")
animation = &"walk_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.75)
shape = SubResource("CapsuleShape2D_y4r1p")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
position_smoothing_enabled = true
position_smoothing_speed = 12.0

[node name="Cursor" type="Sprite2D" parent="."]
visible = false
position = Vector2(-101, -53)
scale = Vector2(0.0277778, 0.0277778)

[node name="SwordHbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 6

[node name="up" type="CollisionShape2D" parent="SwordHbox"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_y4r1p")
disabled = true

[node name="down" type="CollisionShape2D" parent="SwordHbox"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_d2wvv")
disabled = true

[node name="right" type="CollisionShape2D" parent="SwordHbox"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_3v2ag")
disabled = true

[node name="left" type="CollisionShape2D" parent="SwordHbox"]
position = Vector2(-20, 0)
shape = SubResource("RectangleShape2D_jej6c")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_esh0l")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.25
shadow_color = Color(0, 0, 0, 0.192157)
texture = ExtResource("9_fnujr")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamPolyphonic_d2wvv")
volume_db = -12.5

[node name="UI" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="UI/Main"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -56.0
offset_right = 392.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_3v2ag")
theme_override_styles/fill = SubResource("StyleBoxFlat_jej6c")
show_percentage = false

[node name="Label" type="Label" parent="UI/Main/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -10.5
offset_right = 32.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "22/100"
label_settings = SubResource("LabelSettings_f1ej7")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_animation_finished"]
[connection signal="body_entered" from="SwordHbox" to="." method="_on_sword_hbox_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_body_shape_exited"]
